<!--
  ~ Copyright 2017, 2018 Tensigma Ltd.
  ~
  ~ Licensed under the Microsoft Reference Source License (MS-RSL)
  ~
  ~ This license governs use of the accompanying software. If you use the software, you accept this license.
  ~ If you do not accept the license, do not use the software.
  ~
  ~ 1. Definitions
  ~ The terms "reproduce," "reproduction," and "distribution" have the same meaning here as under U.S. copyright law.
  ~ "You" means the licensee of the software.
  ~ "Your company" means the company you worked for when you downloaded the software.
  ~ "Reference use" means use of the software within your company as a reference, in read only form, for the sole purposes
  ~ of debugging your products, maintaining your products, or enhancing the interoperability of your products with the
  ~ software, and specifically excludes the right to distribute the software outside of your company.
  ~ "Licensed patents" means any Licensor patent claims which read directly on the software as distributed by the Licensor
  ~ under this license.
  ~
  ~ 2. Grant of Rights
  ~ (A) Copyright Grant- Subject to the terms of this license, the Licensor grants you a non-transferable, non-exclusive,
  ~ worldwide, royalty-free copyright license to reproduce the software for reference use.
  ~ (B) Patent Grant- Subject to the terms of this license, the Licensor grants you a non-transferable, non-exclusive,
  ~ worldwide, royalty-free patent license under licensed patents for reference use.
  ~
  ~ 3. Limitations
  ~ (A) No Trademark License- This license does not grant you any rights to use the Licensor’s name, logo, or trademarks.
  ~ (B) If you begin patent litigation against the Licensor over patents that you think may apply to the software
  ~ (including a cross-claim or counterclaim in a lawsuit), your license to the software ends automatically.
  ~ (C) The software is licensed "as-is." You bear the risk of using it. The Licensor gives no express warranties,
  ~ guarantees or conditions. You may have additional consumer rights under your local laws which this license cannot
  ~ change. To the extent permitted under your local laws, the Licensor excludes the implied warranties of merchantability,
  ~ fitness for a particular purpose and non-infringement.
  -->

<resources>
  <!--app-->
  <string name="app_name">Atlant Wallet</string>
  <string name="app_prefix_coin">ATL</string>

  <!--menu & toolbar-->
  <string name="menu_qr_code">QR-сode</string>
  <string name="menu_no_title"> </string>
  <string name="menu_balance">Balance</string>

  <!--material drawer-->
  <string name="material_drawer_title">Menu</string>
  <string name="material_drawer_actions">Actions</string>
  <string name="material_drawer_send">Send</string>
  <string name="material_drawer_receive">Receive</string>
  <string name="material_drawer_settings">Settings</string>
  <string name="material_drawer_general">General</string>
  <string name="material_drawer_app">App</string>

  <!--login selected-->
  <string name="login_selected_create_wallet">Create new wallet</string>
  <string name="login_selected_wallet">Import wallet</string>

  <!--login selected app-->
  <string name="login_selected_app_invest_title">Wallet</string>
  <string name="login_selected_app_invest_title2">Invest</string>
  <string name="login_selected_app_rent_title">P2P Rentals</string>
  <string name="login_selected_app_rent_title2">Rent</string>
  <string name="login_selected_app_trade_title">Exchange</string>
  <string name="login_selected_app_trade_title2">Trade</string>

  <!--login-->
  <string name="login_create_password_text">Create PIN code</string>
  <string name="login_confirm_password_text">Confirm PIN code</string>
  <string name="login_enter_password_text">Enter PIN code</string>
  <string name="login_change_current_password">Enter the current PIN code</string>
  <string name="login_change_new_password">Enter the new PIN code</string>
  <string name="login_change_new_repeat_password">Confirm the current PIN code</string>
  <string name="login_dialog_decrypt_wallet">Decoding of a wallet…</string>
  <string name="login_dialog_create_wallet">Creating a wallet…</string>
  <string name="login_dialog_change_wallet">Change password…</string>
  <string name="keyboard_number_one">1</string>
  <string name="keyboard_number_two">2</string>
  <string name="keyboard_number_three">3</string>
  <string name="keyboard_number_four">4</string>
  <string name="keyboard_number_five">5</string>
  <string name="keyboard_number_six">6</string>
  <string name="keyboard_number_seven">7</string>
  <string name="keyboard_number_eight">8</string>
  <string name="keyboard_number_nine">9</string>
  <string name="keyboard_number_zero">0</string>
  <string name="keyboard_sos">SOS</string>
  <string name="login_message_wrong_password">Wrong PIN code! Please, repeat again!</string>
  <string name="login_message_successfully_change_password">Successfully changed the PIN code!</string>

  <!--import-->
  <string name="import_wallet_title">Import</string>
  <string name="import_wallet_text1">Enter your</string>
  <string name="import_wallet_text2">or scan QR code</string>
  <string name="import_wallet_edit_hint">private key</string>

  <!--export-->
  <string name="export_title">Export</string>
  <string name="export_private_key_text">Your private key</string>

  <!--backup-->
  <string name="backup_title">Backup</string>
  <string name="backup_text">Don’t forget to save your private key</string>
  <string name="backup_text2">Yes, I made a backup of this key</string>

  <!--send-->
  <string name="send_title">Send</string>
  <string name="send_you_have">You have</string>
  <string name="send_text">What amount do you want to send?</string>
  <string name="send_no_money">Attention! Insufficient balance!</string>
  <string name="send_address_hint">Beneficiary Address</string>
  <string name="send_value_hint">0.00</string>
  <string name="send_invalid_data">Invalid address format</string>
  <string name="send_no_correct_money">Attention! You can send more 0.000000000000000001 %1$s</string>
  <string name="send_process">Send…</string>
  <string name="send_preparing">Preparing for send…</string>
  <string name="send_successful_send">Transaction sent successfully</string>
  <string name="send_error_send">Send error, try again</string>
  <string name="send_dialog_text_warning">You irrevocably send %1$s %2$s by the address %3$s</string>

  <!--receive-->
  <string name="receive_title">Receive</string>
  <string name="receive_explanation">Click here to copy this address and send it to the recipient</string>

  <!--setting-->
  <string name="pref_security_title">Security</string>
  <string name="pref_security_pin">Change password</string>
  <string name="pref_control_title">Manage your wallet</string>
  <string name="pref_control_delete">Remove a wallet</string>
  <string name="pref_control_import">Import a wallet</string>
  <string name="pref_control_export">Export a wallet</string>
  <string name="pref_dialog_delete">If you delete the wallet, you will lose access to it. Do you want to continue?</string>
  <string name="pref_dialog_import">If you import a new wallet, you will lose access to the current wallet. Do you want to continue?</string>
  <string name="pref_about_app_title">Application version</string>
  <string name="pref_about_app_version">0</string>

  <!--camera-->
  <string name="camera_permission">You must have the Camera permission</string>
  <string name="camera_failScan">Invalid QR-code</string>

  <!--transaction-->
  <string name="transaction_status_send">Sent</string>
  <string name="transaction_status_received">Received</string>
  <string name="transaction_status_self">Self</string>

  <!--transactions no-->
  <string name="no_transactions_messages">Transactions will be displayed \nwhen you receive or send\nan %1$s</string>

  <!--button-->
  <string name="bt_done">Done</string>
  <string name="bt_send">Send</string>
  <string name="bt_next">Next</string>
  <string name="bt_lets_start">Let\'s Start</string>
  <string name="bt_dialog_continue">Continue</string>
  <string name="bt_dialog_back">Close</string>
  <string name="bt_dialog_ok">OK</string>

  <!--system-->
  <string name="system_key_copied">Address copied to clipboard</string>
  <string name="system_error">Something went wrong\n...\nPerhaps because</string>
  <string name="system_text">Text</string>
  <string name="system_section_in_development">Application in development</string>
  <string name="system_no_internet_connection">No internet connection</string>
  <string name="system_wallet_loading_error">Error loading data</string>
  <string name="system_timeout">Could not connect to the server, please try again later.</string>
  <string name="system_image">Image</string>
  <string name="system_copyright">Copyright © Atlant.io, 2019</string>
  <string name="system_value_default">0</string>
  <string name="system_dash">- - - - - - - - - - - - - - - - - -</string>

</resources>
