<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017-2019 Tensigma Ltd. All rights reserved.
  ~ Use of this source code is governed by Microsoft Reference Source
  ~ License (MS-RSL) that can be found in the LICENSE file.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:key="@string/pref_security_title"
    android:title="@string/pref_security_title">
    <Preference
      android:icon="@mipmap/ic_change_password"
      android:key="@string/pref_security_pin"
      android:title="@string/pref_security_pin"/>
  </PreferenceCategory>

  <PreferenceCategory
    android:key="@string/pref_control_title"
    android:title="@string/pref_control_title">
    <Preference
      android:icon="@mipmap/ic_export"
      android:key="@string/pref_control_export"
      android:title="@string/pref_control_export"/>
    <Preference
      android:icon="@mipmap/ic_import"
      android:key="@string/pref_control_import"
      android:title="@string/pref_control_import"/>
    <Preference
      android:icon="@mipmap/ic_remove"
      android:key="@string/pref_control_delete"
      android:title="@string/pref_control_delete"/>
  </PreferenceCategory>

  <PreferenceCategory
    android:key="@string/pref_about_app_title"
    android:title="@string/pref_about_app_title">
    <Preference
      android:key="@string/pref_about_app_version"
      android:title="0"/>
  </PreferenceCategory>

</PreferenceScreen>